# preferences

./: CMakeLists.txt  CMakePresets.json  README.md  versions.txt
.github/: spack-ubuntu.yml
.github/workflows/: spack-ubuntu.yml
cmake/: XercesC.cmake  common.cmake  version.cmake
src/: CMakeLists.txt
src/CfgEditor/: CMakeLists.txt  CfgEdit.cpp
src/CfgEditor/cmake/: CfgEditorConfig.cmake.in
src/CfgUpdater/: CMakeLists.txt  CfgUpdate.cpp
src/CfgUpdater/cmake/: CfgUpdaterConfig.cmake.in
src/PrefsCore/: BoolNamedValue.cpp  CMakeLists.txt  ColorNamedValue.cpp  DoubleNamedValue.cpp  DoubleTripletNamedValue.cpp  Element.cpp  LongNamedValue.cpp  NamedValue.cpp  PreferencesHelper.cpp  PreferencesInfos.cpp  PrefsCore.doxygen  Section.cpp  StringNamedValue.cpp  UnsignedLongNamedValue.cpp
src/PrefsCore/cmake/: PrefsCoreConfig.cmake.in  PrefsCoreDistribution.h.in
src/PrefsCore/public/PrefsCore/: BoolNamedValue.h  ColorNamedValue.h  DoubleNamedValue.h  DoubleTripletNamedValue.h  Element.h  LongNamedValue.h  NamedValue.h  PreferencesHelper.h  PreferencesInfos.h  Section.h  StringNamedValue.h  UnsignedLongNamedValue.h  prefs_config.h
src/PrefsQt/: CMakeLists.txt  PrefsQt.doxygen  QtPreferencesDialog.cpp  QtPreferencesInfos.cpp  QtPreferencesPanel.cpp  QtPrefsListViewItem.cpp  QtPrefsNamedValueListViewItem.cpp  QtPrefsSectionListViewItem.cpp  QtPrefsUpdater.cpp  QtXMLNameValidator.cpp
src/PrefsQt/cmake/: PrefsQtConfig.cmake.in
src/PrefsQt/public/PrefsQt/: QtPreferencesDialog.h  QtPreferencesInfos.h  QtPreferencesPanel.h  QtPrefsListViewItem.h  QtPrefsNamedValueListViewItem.h  QtPrefsSectionListViewItem.h  QtPrefsUpdater.h  QtXMLNameValidator.h
src/PrefsXerces/: CMakeLists.txt  PrefsXerces.doxygen  XMLLoader.cpp  XMLPrefsDOMErrorHandler.cpp  XMLPrefsErrorHandler.cpp  XMLPrefsSAXErrorHandler.cpp  XMLSchemaPrefsHelper.cpp  XercesSessionManager.cpp  XercesUtils.cpp
src/PrefsXerces/cmake/: PrefsXercesConfig.cmake.in
src/PrefsXerces/public/PrefsXerces/: XMLLoader.h  XMLPrefsDOMErrorHandler.h  XMLPrefsErrorHandler.h  XMLPrefsSAXErrorHandler.h  XMLSchemaPrefsHelper.h  XercesSessionManager.h  XercesUtils.h
src/xerces_tests/: CMakeLists.txt  create_tree.cpp  read_config.cpp
test_link/: main.cpp
